--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 
     <!-- <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet"> -->
-    <link href="favicon.ico" rel="shortcut icon">
     <link rel="stylesheet" href="css/styles.css">
 
     <!-- Leaflet CSS -->
@@ -23,6 +22,8 @@
     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
     crossorigin=""></script>
 
+	<!-- PapaParse -->
+	<script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 </head>
 <body>
     <div id="map"></div>
